e-commerce/laptop.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laptop-deployment
  labels:
    app: ecommerce
spec:
  template:
    metadata: 
      name: laptopcontainer
      labels:
        app: ecommerce
    spec:
      containers: 
        - name: laptop-server
          image: nginx
          ports:
            - containerPort: 80
  replicas: 3
  selector:
    matchLabels:
      app: ecommerce
  strategy: 
    type: RollingUpdate
...
---
apiVersion: v1
kind: Service
metadata: 
  name: laptop-service
  labels:
    app: ecommerce
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: ecommerce

...
