e-commerce/mobile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-deployment
  labels:
    app: ecommerce
spec:
  template:
    metadata: 
      name: mobile-container
      labels:
        app: ecommerce
    spec:
      name: mobile-server
      image: httpd
      ports:
        - containerPort: 80
  replicas: 3
  selector: 
    matchLabels:
      app: ecommerce
  strategy:
    type: RollingUpdate
...

---
apiVersion: v1
kind: Service
metadata: 
  name: mobile-service
  labels:
    app: ecommerce
spec:
  ports:
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: ecommerce
