e-commerce/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: laptop-service
      port:
        number: 80
  rules:
    - host: "ae7c31b5872c5426cbd521469e4aebc7-2654e9d200b59eb6.elb.eu-west-1.amazonaws.com"
      http:
        paths:
        - path: /mobile
          pathType: Prefix
          backend:
            service:
              name: mobile-service
              port:
                number: 80
        - path: /laptop
          pathType: Prefix
          backend:
            service:
              name: laptop-service
              port:
                number: 80
